layouts/partials/css/main.css
/* ... */
div.header nav ul li:last-child {
    margin-right: 0;
}

div.header nav ul a {
    color: #555555;
    font-weight: 400;
    font-size: 14px;
    text-transform: uppercase;
    font-family: 'Helvetica Neue', 'Arial', sans-serif;
    -webkit-transition: color 0.1s cubic-bezier(0.47, 0, 0.75, 0.72);
    -moz-transition: color 0.1s cubic-bezier(0.47, 0, 0.75, 0.72);
    -ms-transition: color 0.1s cubic-bezier(0.47, 0, 0.75, 0.72);
    -o-transition: color 0.1s cubic-bezier(0.47, 0, 0.75, 0.72);
}

div.header nav ul a:hover {
    color: #111111;
}

div.footer .container {
    -webkit-align-items: center;
    -moz-align-items: center;
    -ms-align-items: center;
    align-items: center;
    -webkit-justify-content: center;
    -moz-justify-content: center;
    -ms-justify-content: center;
    justify-content: center;
    flex-direction: column-reverse;
    width: 100%;
    text-align: center;
}

div.footer .container a {
    font-size: 14px;
    margin-left: 6px;
    margin-right: 6px;
    opacity: 0.6;
    color: #666666;
    -webkit-transition: opacity 0.1s cubic-bezier(0.47, 0, 0.75, 0.72);
    -moz-transition: opacity 0.1s cubic-bezier(0.47, 0, 0.75, 0.72);
    -ms-transition: opacity 0.1s cubic-bezier(0.47, 0, 0.75, 0.72);
    -o-transition: opacity 0.1s cubic-bezier(0.47, 0, 0.75, 0.72);
}

div.footer .container a:first-child {
    margin-left: 0;
}

div.footer .container a:last-child {
    margin-right: 0;
}

div.footer .container a:hover {
    opacity: 0.8;
}

div.footer .container a .icon {
    width: 16px;
    height: 16px;
}

div.footer .container .gitrepo {
    flex-grow: 0.5;
    text-align: start;
}

div.footer .container .copyright {
    flex-grow: 0.5;
    text-align: center;
}

div.footer .container .icons {
    flex-grow: 0.5;
    text-align: end;
}

div.main .container {
    -webkit-align-items: center;
    -moz-align-items: center;
    -ms-align-items: center;
    align-items: center;
    -webkit-justify-content: flex-start;
    -moz-justify-content: flex-start;
    -ms-justify-content: flex-start;
    justify-content: flex-start;
}

div.main .content {
    color: #111111;
    font-size: 16px;
}

div.main .content .title-container {
    display: -webkit-flex;
    display: -moz-flex;
    display: -ms-flexbox;
    display: -ms-flex;
    display: flex;
    -webkit-justify-content: space-between;
    -moz-justify-content: space-between;
    -ms-justify-content: space-between;
    justify-content: space-between;
}

div.main .content .posts {
    {{ $nbPosts := len (where .Data.Pages "Params.best" true) }}
    {{ if gt $nbPosts 0 }}
    margin-bottom: 4em;
    {{ end }}
}

div.main .content .page-heading {
    font-size: 20px;
    font-weight: 700;
    font-family: 'Helvetica Neue', 'Arial', sans-serif;
    letter-spacing: -0.005rem;
    text-transform: uppercase;
    -moz-osx-font-smoothing: grayscale;
    -webkit-font-smoothing: antialiased;
    font-smoothing: antialiased;
    color: #333333;
    margin-bottom: 16px;
}

div.main .content .front-matter .page-heading {
    margin-bottom: 0;
}

div.main .content .front-matter .meta {
    font-size: 14px;
    color: #666666;
    display: -webkit-flex;
    display: -moz-flex;
    display: -ms-flexbox;
    display: -ms-flex;
    display: flex;
    margin-bottom: 32px;
}

div.main .content .front-matter .date,
div.main .content .front-matter .author,
div.main .content .front-matter .tags,
div.main .content .front-matter .word-count,
div.main .content .front-matter .middot:before {
    display: none;
}

div.main .content .front-matter .middot:before {
    font-size: 6px;
    margin: 0 6px;
    vertical-align: middle;
    content: "•";
}

div.main .content .front-matter .tags ul {
    display: -webkit-flex;
    display: -moz-flex;
    display: -ms-flexbox;
    display: -ms-flex;
    display: flex;
    -webkit-flex-direction: row;
    -moz-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -moz-align-items: center;
    -ms-align-items: center;
    align-items: center;
}

div.main .content .front-matter .tags ul li {
    -webkit-transition: opacity 0.1s cubic-bezier(0.47, 0, 0.75, 0.72);
    -moz-transition: opacity 0.1s cubic-bezier(0.47, 0, 0.75, 0.72);
    -ms-transition: opacity 0.1s cubic-bezier(0.47, 0, 0.75, 0.72);
    -o-transition: opacity 0.1s cubic-bezier(0.47, 0, 0.75, 0.72);
}

div.main .content .front-matter .tags ul li:hover {
    opacity: 0.7;
}

div.main .content .front-matter .tags ul li a {
    color: #666666;
}

div.main .container.f04 {
    -webkit-justify-content: center;
    -moz-justify-content: center;
    -ms-justify-content: center;
    justify-content: center;
}

div.main .container.f04 .content {
    display: -webkit-flex;
    display: -moz-flex;
    display: -ms-flexbox;
    display: -ms-flex;
    display: flex;
    -webkit-flex-direction: column;
    -moz-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: center;
    -moz-align-items: center;
    -ms-align-items: center;
    align-items: center;
}

div.main .container.f04 .content .num {
    margin: 30px 0px 30px 0;
    font-weight: 400;
    font-family: 'Helvetica Neue', 'Arial', sans-serif;
    font-size: 50px;
}

div.main .container.f04 .content .detail {
    margin-bottom: 40px;
}

div.main .container .content .groupby {
    margin-top: 1em;
    padding-left: 0.5em;
}

div.main .container .content .post-item {
    display: -webkit-flex;
    display: -moz-flex;
    display: -ms-flexbox;
    display: -ms-flex;
    display: flex;
    -webkit-align-items: center;
    -moz-align-items: center;
    -ms-align-items: center;
    align-items: center;
    display: list-item;
    list-style: disc inside;
}

div.main .container .content .post-item .meta {
    font-size: 14px;
    color: #666666;
    display: none;
    min-width: 100px;
}
/* ... */

